--- a/FriendsAndFamily/FriendsAndFamily.html
+++ b/FriendsAndFamily/FriendsAndFamily.html
@@ -64,131 +64,7 @@
     </nav>
     <!-- Navbar -->
 
-    <!--Carousel Wrapper-->
-    <div id="carousel-example-1z" class="carousel slide carousel-fade" data-ride="carousel">
-
-      <!--Indicators-->
-      <ol class="carousel-indicators">
-        <li data-target="#carousel-example-1z" data-slide-to="0" class="active"></li>
-        <li data-target="#carousel-example-1z" data-slide-to="1"></li>
-        <li data-target="#carousel-example-1z" data-slide-to="2"></li>
-      </ol>
-      <!--/.Indicators-->
-
-      <!--Slides-->
-      <div class="carousel-inner" role="listbox">
-
-        <!--First slide-->
-        <div class="carousel-item active">
-          <div class="view" style="background-image: url(&apos;https://i.imgur.com/APjRNAg.jpg&apos;); background-repeat: no-repeat; background-size: cover;">
-
-            <!-- Mask & flexbox options-->
-            <div class="mask rgba-black-light d-flex justify-content-center align-items-center">
-
-              <!-- Content -->
-              <div class="text-center white-text mx-5 wow fadeIn">
-                <h1 class="mb-4">
-                  <strong>Skyler the Bernese Mountain Dog</strong>
-                </h1>
-
-                <p>
-                  <strong></strong>
-                </p>
-
-                <p class="mb-4 d-none d-md-block">
-                  <strong>Skyler is a Bernese Mountain dog who came home to my boyfriend and I on September 4th, 2019. She was born on July 2nd 2019 in Illinois and traveled a long way to come home to us in Oregon. We are incredibly grateful to have her and are proud to be her puppy parents.</strong>
-                </p>
-
-                <a target="_blank" href="https://www.akc.org/dog-breeds/bernese-mountain-dog/" class="btn btn-outline-white btn-lg">AKC Information
-                  <i class="fa fa-graduation-cap ml-2"></i>
-                </a>
-              </div>
-              <!-- Content -->
-
-            </div>
-            <!-- Mask & flexbox options-->
-
-          </div>
-        </div>
-        <!--/First slide-->
-
-        <!--Second slide-->
-        <div class="carousel-item">
-          <div class="view" style="background-image: url(&apos;https://i.imgur.com/GNmbBFn.jpg&apos;); background-repeat: no-repeat; background-size: cover;">
-
-            <!-- Mask & flexbox options-->
-            <div class="mask rgba-black-light d-flex justify-content-center align-items-center">
-
-              <!-- Content -->
-              <div class="text-center white-text mx-5 wow fadeIn">
-                <h1 class="mb-4">
-                  <strong>Skyler the Bernese Mountain Dog</strong>
-                </h1>
-
-                <p class="mb-4 d-none d-md-block">
-                  <strong>Skyler is a Bernese Mountain dog who came home to my boyfriend and I on September 4th, 2019. She was born on July 2nd 2019 in Illinois and traveled a long way to come home to us in Oregon. We are incredibly grateful to have her and are proud to be her puppy parents.</strong>
-                </p>
-
-                <a target="_blank" href="https://www.akc.org/dog-breeds/bernese-mountain-dog/" class="btn btn-outline-white btn-lg">AKC Information
-                  <i class="fa fa-graduation-cap ml-2"></i>
-                </a>
-              </div>
-              <!-- Content -->
-
-            </div>
-            <!-- Mask & flexbox options-->
-
-          </div>
-        </div>
-        <!--/Second slide-->
-
-        <!--Third slide-->
-        <div class="carousel-item">
-          <div class="view" style="background-image: url(&apos;https://i.imgur.com/TsDjfTh.jpg&apos;); background-repeat: no-repeat; background-size: cover;">
-
-            <!-- Mask & flexbox options-->
-            <div class="mask rgba-black-light d-flex justify-content-center align-items-center">
-
-              <!-- Content -->
-              <div class="text-center white-text mx-5 wow fadeIn">
-                <h1 class="mb-4">
-                  <strong>Skyler the Bernese Mountain Dog</strong>
-                </h1>
-
-                <p class="mb-4 d-none d-md-block">
-                  <strong>Skyler is a Bernese Mountain dog who came home to my boyfriend and I on September 4th, 2019. She was born on July 2nd 2019 in Illinois and traveled a long way to come home to us in Oregon. We are incredibly grateful to have her and are proud to be her puppy parents.</strong>
-                </p>
-
-                <a target="_blank" href="https://www.akc.org/dog-breeds/bernese-mountain-dog/" class="btn btn-outline-white btn-lg">AKC Information
-                  <i class="fa fa-graduation-cap ml-2"></i>
-                </a>
-              </div>
-              <!-- Content -->
-
-            </div>
-            <!-- Mask & flexbox options-->
-
-          </div>
-        </div>
-        <!--/Third slide-->
-
-      </div>
-      <!--/.Slides-->
-
-      <!--Controls-->
-      <a class="carousel-control-prev" href="#carousel-example-1z" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carousel-example-1z" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-      <!--/.Controls-->
-
-    </div>
-    <!--/.Carousel Wrapper-->
-
+    
     <!--Main layout-->
     <main>
       <div class="container">
@@ -201,8 +77,8 @@
 
             <!--Grid column-->
             <div class="col-md-6 mb-4">
-
-              <img src="https://mdbootstrap.com/img/Marketing/mdb-press-pack/mdb-main.jpg" class="img-fluid z-depth-1-half" alt>
+              <br></br>
+              <img src="https://i.imgur.com/fWsLBVL.jpg" class="img-fluid z-depth-1-half" alt>
 
             </div>
             <!--Grid column-->
@@ -211,28 +87,25 @@
             <div class="col-md-6 mb-4">
 
               <!-- Main heading -->
-              <h3 class="h3 mb-3">Material Design for Bootstrap</h3>
-              <p>This template is created with Material Design for Bootstrap (
-                <strong>MDB</strong> ) framework.</p>
-              <p>Read details below to learn more about MDB.</p>
+              <br></br>
+              <h3 class="h3 text-center">Skyler's Friends & Family</h3>
+              <div style="width: 500px; height: 600px; overflow-y: scroll;">
+                <img class="img.friends" src="https://cdn.discordapp.com/attachments/430432311247503360/558491205206278169/image0.jpg" style="width:75%;height:auto;"> <br> Skyler's best friend, Bentley. <br />
+                <img src="https://cdn.discordapp.com/attachments/566033150753505280/683529800945631237/image0.jpg" style="width:75%;height:auto;"> <br><br />
+                <img src="https://cdn.discordapp.com/attachments/566033150753505280/683530173772988449/IMG_0856.JPG" style="transform:rotate(90deg);width:75%;height:auto;"> <br><br />
+                <img src="https://cdn.discordapp.com/attachments/566033150753505280/683527522004238403/20190630_003459.jpg" style="transform:rotate(90deg);width:75%;height:auto;"> <br><br />
+                <img src="https://cdn.discordapp.com/attachments/566033150753505280/683527002086703184/doggo2.jpg" style="width:75%;height:auto;"> <br><br />
+                <img src="https://cdn.discordapp.com/attachments/566033150753505280/683526971652571148/image0.jpg" style="transform:rotate(90deg);width:75%;height:auto;"> <br><br />
+                <img src="https://cdn.discordapp.com/attachments/566033150753505280/683527520783564820/20191111_125841.jpg" style="width:75%;height:auto;"> <br><br />
+
+              </div>
               <!-- Main heading -->
 
               <hr>
 
               <p>
-                <strong>400+</strong> material UI elements,
-                <strong>600+</strong> material icons,
-                <strong>74</strong> CSS animations, SASS files, templates, tutorials and many more.
-                <strong>Free for personal and commercial use.</strong>
+                <strong>Skyler has friends and family from all around the country, and is happy to have them in her life!</strong>
               </p>
-
-              <!-- CTA -->
-              <a target="_blank" href="https://mdbootstrap.com/getting-started/" class="btn btn-grey btn-md">Download
-                <i class="fa fa-download ml-1"></i>
-              </a>
-              <a target="_blank" href="https://mdbootstrap.com/components/" class="btn btn-grey btn-md">Live demo
-                <i class="fa fa-image ml-1"></i>
-              </a>
 
             </div>
             <!--Grid column-->
@@ -248,7 +121,7 @@
         <!--Section: Main features & Quick Start-->
         <section>
 
-          <h3 class="h3 text-center mb-5">About MDB</h3>
+          <h3 class="h3 text-center mb-5">Become a friend of Skyler's!</h3>
 
           <!--Grid row-->
           <div class="row wow fadeIn">
