Early Days subpage complete

--- a/EarlyDays/EarlyDays.html
+++ b/EarlyDays/EarlyDays.html
@@ -101,7 +101,7 @@
               </p>
 
               <!-- CTA -->
-              <a href="../a.txt" download class="btn btn-grey btn-md">Download <!-- FIX ME -->
+              <a href="../Puppy Skyler.jpg" download class="btn btn-grey btn-md">Download 
                 <i class="fa fa-download ml-1"></i>
               </a>
 
@@ -130,11 +130,9 @@
               <!--First row-->
               <div class="row">
                 <div class="col-1 mr-3">
-                  <i class="fa fa-code fa-2x indigo-text"></i>
                 </div>
                 <div class="col-10">
-                  <h5 class="feature-title">Bootstrap 4</h5>
-                  <p class="grey-text">Thanks to MDB you can take advantage of all feature of newest Bootstrap 4.</p>
+                  <img src="https://i.imgur.com/7uh5svd.jpg" class="img-fluid z-depth-1-half" alt>
                 </div>
               </div>
               <!--/First row-->
@@ -144,12 +142,9 @@
               <!--Second row-->
               <div class="row">
                 <div class="col-1 mr-3">
-                  <i class="fa fa-book fa-2x blue-text"></i>
                 </div>
                 <div class="col-10">
-                  <h5 class="feature-title">Detailed documentation</h5>
-                  <p class="grey-text">We give you detailed user-friendly documentation at your disposal. It will help you to implement your ideas
-                    easily.
+                  <img src="https://i.imgur.com/76gYTEr.jpg" class="img-fluid z-depth-1-half" alt>
                   </p>
                 </div>
               </div>
@@ -157,17 +152,7 @@
 
               <div style="height:30px"></div>
 
-              <!--Third row-->
-              <div class="row">
-                <div class="col-1 mr-3">
-                  <i class="fa fa-graduation-cap fa-2x cyan-text"></i>
-                </div>
-                <div class="col-10">
-                  <h5 class="feature-title">Lots of tutorials</h5>
-                  <p class="grey-text">We care about the development of our users. We have prepared numerous tutorials, which allow you to learn
-                    how to use MDB as well as other technologies.</p>
-                </div>
-              </div>
+
               <!--/Third row-->
 
             </div>
@@ -176,9 +161,8 @@
             <!--Grid column-->
             <div class="col-lg-6 col-md-12">
 
-              <p class="h5 text-center mb-4">Watch our &quot;5 min Quick Start&quot; tutorial</p>
-              <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/cXTThxoywNQ" allowfullscreen></iframe>
+        
+                <img src="https://i.imgur.com/aVzxMab.jpg" class="img-fluid z-depth-1-half" alt>
               </div>
             </div>
             <!--/Grid column-->
