about me started

--- a/AboutMe/AboutMe.html
+++ b/AboutMe/AboutMe.html
@@ -1,68 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Skyler the Berner</title>
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- Bootstrap core CSS -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
-    <!-- Material Design Bootstrap -->
-    <link href="../css/mdb.min.css" rel="stylesheet">
-    <!-- Your custom styles (optional) -->
-    <link href="../css/style.css" rel="stylesheet">
-  </head>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <title>Skyler the Berner</title>
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <!-- Bootstrap core CSS -->
+  <link href="../css/bootstrap.min.css" rel="stylesheet">
+  <!-- Material Design Bootstrap -->
+  <link href="../css/mdb.min.css" rel="stylesheet">
+  <!-- Your custom styles (optional) -->
+  <link href="../css/style.css" rel="stylesheet">
+</head>
 
-  <body>
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
-      <div class="container">
+<body>
+  <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
+    <div class="container">
 
-        <!-- Brand -->
-        <a class="navbar-brand" href="" target="_blank">
-          <strong>Skyler</strong>
-        </a>
+      <!-- Brand -->
+      <a class="navbar-brand" href="../index.html">
+        <strong>Skyler</strong>
+      </a>
 
-        <!-- Collapse -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+      <!-- Collapse -->
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-        <!-- Links -->
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <!-- Links -->
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-          <!-- Left -->
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="../index.html">Home
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../AboutMe/AboutMe.html">About Me</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../EarlyDays/EarlyDays.html">Early Days</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../FriendsAndFamily/FriendsAndFamily.html">Friends & Family</a>
-            </li>
-          </ul>
+        <!-- Left -->
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="../index.html">Home
+              <span class="sr-only">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../AboutMe/AboutMe.html">About Me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../EarlyDays/EarlyDays.html">Early Days</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../FriendsAndFamily/FriendsAndFamily.html">Friends & Family</a>
+          </li>
+        </ul>
 
-          <!-- Right -->
-          <ul class="navbar-nav nav-flex-icons">
-            <li class="nav-item">
-              <a href="https://github.com/daniellepuga" class="nav-link border border-light rounded" target="_blank">
-                <i class="fa fa-github mr-2"></i>Danielle's Github
-              </a>
-            </li>
-          </ul>
-        </div>
+        <!-- Right -->
+        <ul class="navbar-nav nav-flex-icons">
+          <li class="nav-item">
+            <a href="https://github.com/daniellepuga" class="nav-link border border-light rounded" target="_blank">
+              <i class="fa fa-github mr-2"></i>Danielle's Github
+            </a>
+          </li>
+        </ul>
       </div>
-    </nav>
-    <!-- Navbar -->
+    </div>
+  </nav>
+  <!-- Navbar -->
 
   <!--Main layout-->
   <main>
@@ -76,8 +77,8 @@
 
           <!--Grid column-->
           <div class="col-md-6 mb-4">
-              <br> </br>
-            <img src="https://i.imgur.com/MCVMGQP.jpg" class="img-fluid z-depth-1-half" alt>
+            <br> </br>
+            <img src="https://i.imgur.com/6JjYP7m.jpg" class="img-fluid z-depth-1-half" alt>
 
           </div>
           <!--Grid column-->
@@ -87,22 +88,21 @@
 
             <!-- Main heading -->
             <br> </br>
-            <h3 class="h3 mb-3">Skyler as a Puppy</h3>
-            <p>Skyler was born July 2nd, 2019 as a smaller puppy in her litter. Skyler's parents are named Mike Uti Johnny Depp and Bella Nessie, both weighing in at around 110 pounds. When she arrived in Oregon, Skyler was a clumsy puppy with every intention to chew on furniture and turn our lives around. However with training and proper socialization she has turned into an ideal canine citizen.</p>
+            <h3 class="h3 mb-3">About Skyler</h3>
+            <p>Skyler is currently an eight month old puppy. She might seem like she's still young but she weighs in at about 80 pounds right now!
+              We expect her to be at least 110 by the time she is fully mature at the age of around a year and a half. Bernese mountain dogs overall have
+              a tame personality and are very attached to their owners, with a tendency to be aloof towards strangers.
+              However we are lucky enough that Skyler loves most people she meets, and loves to play with anyone who will give her attention.
+            </p>
             <p></p>
             <!-- Main heading -->
-
             <hr>
-
             <p>
-              <strong> Below you can download your own picture of Skyler to keep with you. Enjoy! </strong>
+              <strong> If you would like to find out more about Skyler and her breed description, follow the links below! </strong>
             </p>
 
             <!-- CTA -->
-            <a href="../a.txt" download class="btn btn-grey btn-md">Download <!-- FIX ME -->
-              <i class="fa fa-download ml-1"></i>
             </a>
-
           </div>
           <!--Grid column-->
 
@@ -117,7 +117,7 @@
       <!--Section: Main features & Quick Start-->
       <section>
 
-        <h3 class="h3 text-center mb-5">More Puppy Pictures</h3>
+        <h3 class="h3 text-center mb-5">Skyler's Training Goals</h3>
 
         <!--Grid row-->
         <div class="row wow fadeIn">
@@ -146,7 +146,8 @@
               </div>
               <div class="col-10">
                 <h5 class="feature-title">Detailed documentation</h5>
-                <p class="grey-text">We give you detailed user-friendly documentation at your disposal. It will help you to implement your ideas
+                <p class="grey-text">We give you detailed user-friendly documentation at your disposal. It will help you
+                  to implement your ideas
                   easily.
                 </p>
               </div>
@@ -162,7 +163,8 @@
               </div>
               <div class="col-10">
                 <h5 class="feature-title">Lots of tutorials</h5>
-                <p class="grey-text">We care about the development of our users. We have prepared numerous tutorials, which allow you to learn
+                <p class="grey-text">We care about the development of our users. We have prepared numerous tutorials,
+                  which allow you to learn
                   how to use MDB as well as other technologies.</p>
               </div>
             </div>
@@ -176,7 +178,8 @@
 
             <p class="h5 text-center mb-4">Watch our &quot;5 min Quick Start&quot; tutorial</p>
             <div class="embed-responsive embed-responsive-16by9">
-              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/cXTThxoywNQ" allowfullscreen></iframe>
+              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/cXTThxoywNQ"
+                allowfullscreen></iframe>
             </div>
           </div>
           <!--/Grid column-->
