--- a/EarlyDays/EarlyDays.html
+++ b/EarlyDays/EarlyDays.html
@@ -1,207 +1,211 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Skyler the Berner</title>
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- Bootstrap core CSS -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
-    <!-- Material Design Bootstrap -->
-    <link href="../css/mdb.min.css" rel="stylesheet">
-    <!-- Your custom styles (optional) -->
-    <link href="../css/style.css" rel="stylesheet">
-  </head>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <title>Skyler the Berner</title>
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <!-- Bootstrap core CSS -->
+  <link href="../css/bootstrap.min.css" rel="stylesheet">
+  <!-- Material Design Bootstrap -->
+  <link href="../css/mdb.min.css" rel="stylesheet">
+  <!-- Your custom styles (optional) -->
+  <link href="../css/style.css" rel="stylesheet">
+</head>
 
-  <body>
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
-      <div class="container">
+<body>
+  <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
+    <div class="container">
 
-        <!-- Brand -->
-        <a class="navbar-brand" href="" target="_blank">
-          <strong>Skyler</strong>
-        </a>
+      <!-- Brand -->
+      <a class="navbar-brand" href="../index.html">
+        <strong>Skyler</strong>
+      </a>
 
-        <!-- Collapse -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+      <!-- Collapse -->
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-        <!-- Links -->
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <!-- Links -->
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-          <!-- Left -->
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="../index.html">Home
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="../AboutMe/AboutMe.html">About Me</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../EarlyDays/EarlyDays.html">Early Days</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../FriendsAndFamily/FriendsAndFamily.html">Friends & Family</a>
-              </li>
-            </ul>
+        <!-- Left -->
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="../index.html">Home
+              <span class="sr-only">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../AboutMe/AboutMe.html">About Me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../EarlyDays/EarlyDays.html">Early Days</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../FriendsAndFamily/FriendsAndFamily.html">Friends & Family</a>
+          </li>
+        </ul>
 
-          <!-- Right -->
-          <ul class="navbar-nav nav-flex-icons">
-            <li class="nav-item">
-              <a href="https://github.com/daniellepuga" class="nav-link border border-light rounded" target="_blank">
-                <i class="fa fa-github mr-2"></i>Danielle's Github
-              </a>
-            </li>
-          </ul>
+        <!-- Right -->
+        <ul class="navbar-nav nav-flex-icons">
+          <li class="nav-item">
+            <a href="https://github.com/daniellepuga" class="nav-link border border-light rounded" target="_blank">
+              <i class="fa fa-github mr-2"></i>Danielle's Github
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!-- Navbar -->
+
+
+
+  <!--Main layout-->
+  <main>
+    <div class="container">
+
+      <!--Section: Main info-->
+      <section class="mt-5 wow fadeIn">
+
+        <!--Grid row-->
+        <div class="row">
+
+          <!--Grid column-->
+          <div class="col-md-6 mb-4">
+            <br> </br>
+            <img src="https://i.imgur.com/MCVMGQP.jpg" class="img-fluid z-depth-1-half" alt>
+
+          </div>
+          <!--Grid column-->
+
+          <!--Grid column-->
+          <div class="col-md-6 mb-4">
+
+            <!-- Main heading -->
+            <br> </br>
+            <h3 class="h3 mb-3">Skyler as a Puppy</h3>
+            <p>Skyler was born July 2nd, 2019 as a smaller puppy in her litter. Skyler's parents are named Mike Uti
+              Johnny Depp and Bella Nessie, both weighing in at around 110 pounds. When she arrived in Oregon, Skyler
+              was a clumsy puppy with every intention to chew on furniture and turn our lives around. However with
+              training and proper socialization she has turned into an ideal canine citizen.</p>
+            <p></p>
+            <!-- Main heading -->
+
+            <hr>
+
+            <p>
+              <strong> Below you can download your own picture of Skyler to keep with you. Enjoy! </strong>
+            </p>
+
+            <!-- CTA -->
+            <a href="../Puppy Skyler.jpg" download class="btn btn-grey btn-md">Download
+              <i class="fa fa-download ml-1"></i>
+            </a>
+
+          </div>
+          <!--Grid column-->
+
         </div>
-      </div>
-    </nav>
-    <!-- Navbar -->
+        <!--Grid row-->
 
-    
+      </section>
+      <!--Section: Main info-->
 
-    <!--Main layout-->
-    <main>
-      <div class="container">
+      <hr class="my-5">
 
-        <!--Section: Main info-->
-        <section class="mt-5 wow fadeIn">
+      <!--Section: Main features & Quick Start-->
+      <section>
 
-          <!--Grid row-->
-          <div class="row">
+        <h3 class="h3 text-center mb-5">More Puppy Pictures</h3>
 
-            <!--Grid column-->
-            <div class="col-md-6 mb-4">
-                <br> </br>
-              <img src="https://i.imgur.com/MCVMGQP.jpg" class="img-fluid z-depth-1-half" alt>
+        <!--Grid row-->
+        <div class="row wow fadeIn">
 
+          <!--Grid column-->
+          <div class="col-lg-6 col-md-12 px-4">
+
+            <!--First row-->
+            <div class="row">
+              <div class="col-1 mr-3">
+              </div>
+              <div class="col-10">
+                <img src="https://i.imgur.com/7uh5svd.jpg" class="img-fluid z-depth-1-half" alt>
+              </div>
             </div>
-            <!--Grid column-->
+            <!--/First row-->
 
-            <!--Grid column-->
-            <div class="col-md-6 mb-4">
+            <div style="height:30px"></div>
 
-              <!-- Main heading -->
-              <br> </br>
-              <h3 class="h3 mb-3">Skyler as a Puppy</h3>
-              <p>Skyler was born July 2nd, 2019 as a smaller puppy in her litter. Skyler's parents are named Mike Uti Johnny Depp and Bella Nessie, both weighing in at around 110 pounds. When she arrived in Oregon, Skyler was a clumsy puppy with every intention to chew on furniture and turn our lives around. However with training and proper socialization she has turned into an ideal canine citizen.</p>
-              <p></p>
-              <!-- Main heading -->
-
-              <hr>
-
-              <p>
-                <strong> Below you can download your own picture of Skyler to keep with you. Enjoy! </strong>
-              </p>
-
-              <!-- CTA -->
-              <a href="../Puppy Skyler.jpg" download class="btn btn-grey btn-md">Download 
-                <i class="fa fa-download ml-1"></i>
-              </a>
-
+            <!--Second row-->
+            <div class="row">
+              <div class="col-1 mr-3">
+              </div>
+              <div class="col-10">
+                <img src="https://i.imgur.com/76gYTEr.jpg" class="img-fluid z-depth-1-half" alt>
+                </p>
+              </div>
             </div>
-            <!--Grid column-->
+            <!--/Second row-->
+
+            <div style="height:30px"></div>
+
+
+            <!--/Third row-->
 
           </div>
-          <!--Grid row-->
+          <!--/Grid column-->
 
-        </section>
-        <!--Section: Main info-->
-
-        <hr class="my-5">
-
-        <!--Section: Main features & Quick Start-->
-        <section>
-
-          <h3 class="h3 text-center mb-5">More Puppy Pictures</h3>
-
-          <!--Grid row-->
-          <div class="row wow fadeIn">
-
-            <!--Grid column-->
-            <div class="col-lg-6 col-md-12 px-4">
-
-              <!--First row-->
-              <div class="row">
-                <div class="col-1 mr-3">
-                </div>
-                <div class="col-10">
-                  <img src="https://i.imgur.com/7uh5svd.jpg" class="img-fluid z-depth-1-half" alt>
-                </div>
-              </div>
-              <!--/First row-->
-
-              <div style="height:30px"></div>
-
-              <!--Second row-->
-              <div class="row">
-                <div class="col-1 mr-3">
-                </div>
-                <div class="col-10">
-                  <img src="https://i.imgur.com/76gYTEr.jpg" class="img-fluid z-depth-1-half" alt>
-                  </p>
-                </div>
-              </div>
-              <!--/Second row-->
-
-              <div style="height:30px"></div>
+          <!--Grid column-->
+          <div class="col-lg-6 col-md-12">
 
 
-              <!--/Third row-->
-
-            </div>
-            <!--/Grid column-->
-
-            <!--Grid column-->
-            <div class="col-lg-6 col-md-12">
-
-        
-                <img src="https://i.imgur.com/aVzxMab.jpg" class="img-fluid z-depth-1-half" alt>
-              </div>
-            </div>
-            <!--/Grid column-->
-
+            <img src="https://i.imgur.com/aVzxMab.jpg" class="img-fluid z-depth-1-half" alt>
           </div>
-          <!--/Grid row-->
+        </div>
+        <!--/Grid column-->
 
-        </section>
-        <!--Section: Main features & Quick Start-->
+    </div>
+    <!--/Grid row-->
 
-        <hr class="my-5">
+    </section>
+    <!--Section: Main features & Quick Start-->
 
-  
+    <hr class="my-5">
 
-      </div>
-    </main>
-    <!--Main layout-->
 
-    <!--Footer-->
-    <footer class="page-footer text-center font-small mt-4 wow fadeIn">
 
-      <hr class="my-4">
+    </div>
+  </main>
+  <!--Main layout-->
 
-      <div class="footer-copyright py-3">
+  <!--Footer-->
+  <footer class="page-footer text-center font-small mt-4 wow fadeIn">
 
-    </footer>
+    <hr class="my-4">
 
-    <!-- JQuery -->
-    <script type="text/javascript" src="../js/jquery-3.3.1.min.js"></script>
-    <!-- Bootstrap tooltips -->
-    <script type="text/javascript" src="../js/popper.min.js"></script>
-    <!-- Bootstrap core JavaScript -->
-    <script type="text/javascript" src="../js/bootstrap.min.js"></script>
-    <!-- MDB core JavaScript -->
-    <script type="text/javascript" src="../js/mdb.min.js"></script>
+    <div class="footer-copyright py-3">
 
-    <script type="text/javascript">
-      new WOW().init();
-    </script>
-  </body>
+  </footer>
+
+  <!-- JQuery -->
+  <script type="text/javascript" src="../js/jquery-3.3.1.min.js"></script>
+  <!-- Bootstrap tooltips -->
+  <script type="text/javascript" src="../js/popper.min.js"></script>
+  <!-- Bootstrap core JavaScript -->
+  <script type="text/javascript" src="../js/bootstrap.min.js"></script>
+  <!-- MDB core JavaScript -->
+  <script type="text/javascript" src="../js/mdb.min.js"></script>
+
+  <script type="text/javascript">
+    new WOW().init();
+  </script>
+</body>
 
 </html>
