about me page complete

--- a/AboutMe/AboutMe.html
+++ b/AboutMe/AboutMe.html
@@ -123,50 +123,20 @@
         <div class="row wow fadeIn">
 
           <!--Grid column-->
-          <div class="col-lg-6 col-md-12 px-4">
 
             <!--First row-->
             <div class="row">
-              <div class="col-1 mr-3">
-                <i class="fa fa-code fa-2x indigo-text"></i>
+              <div class="col-1 mr-3"></div>
               </div>
-              <div class="col-10">
-                <h5 class="feature-title">Bootstrap 4</h5>
-                <p class="grey-text">Thanks to MDB you can take advantage of all feature of newest Bootstrap 4.</p>
-              </div>
-            </div>
-            <!--/First row-->
-
-            <div style="height:30px"></div>
-
-            <!--Second row-->
-            <div class="row">
-              <div class="col-1 mr-3">
-                <i class="fa fa-book fa-2x blue-text"></i>
-              </div>
-              <div class="col-10">
-                <h5 class="feature-title">Detailed documentation</h5>
-                <p class="grey-text">We give you detailed user-friendly documentation at your disposal. It will help you
-                  to implement your ideas
-                  easily.
-                </p>
-              </div>
-            </div>
-            <!--/Second row-->
-
-            <div style="height:30px"></div>
-
-            <!--Third row-->
-            <div class="row">
-              <div class="col-1 mr-3">
-                <i class="fa fa-graduation-cap fa-2x cyan-text"></i>
-              </div>
-              <div class="col-10">
-                <h5 class="feature-title">Lots of tutorials</h5>
-                <p class="grey-text">We care about the development of our users. We have prepared numerous tutorials,
-                  which allow you to learn
-                  how to use MDB as well as other technologies.</p>
-              </div>
+                <ul>
+                  <li>Sit nicely for petting - be able to accept attention from strangers without jumping.</li>
+                  <li>Master sit, stay, down, come, paw, wait, take it, leave it, etc. in an area with distractions such as the park.</li>
+                  <li>Recall commands with consistency.</li>
+                  <li>Being able to approach strangers without Skyler trying to get attention from them before allowing the stranger and I to greet.</li>
+                  <li>Good behavior during grooming including turning on command.</li>
+                  <li>Walking through a crowd without pulling, acting polite in a highly trafficked area.</li>
+                  <li>Stay with strangers politely and accept spending time away from us with little to no anxiety.</li>
+                </ul> 
             </div>
             <!--/Third row-->
 
@@ -174,13 +144,7 @@
           <!--/Grid column-->
 
           <!--Grid column-->
-          <div class="col-lg-6 col-md-12">
 
-            <p class="h5 text-center mb-4">Watch our &quot;5 min Quick Start&quot; tutorial</p>
-            <div class="embed-responsive embed-responsive-16by9">
-              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/cXTThxoywNQ"
-                allowfullscreen></iframe>
-            </div>
           </div>
           <!--/Grid column-->
 
