--- a/FriendsAndFamily/FriendsAndFamily.html
+++ b/FriendsAndFamily/FriendsAndFamily.html
@@ -95,19 +95,19 @@
                 src="https://cdn.discordapp.com/attachments/430432311247503360/558491205206278169/image0.jpg"
                 style="width:75%;height:auto;"> <br> Skyler's best friend, Bentley. <br />
               <img src="https://cdn.discordapp.com/attachments/566033150753505280/683529800945631237/image0.jpg"
-                style="width:75%;height:auto;"> <br><br />
+                style="width:75%;height:auto;"> <br><br /><br><br />
               <img src="https://cdn.discordapp.com/attachments/566033150753505280/683530173772988449/IMG_0856.JPG"
-                style="transform:rotate(90deg);width:75%;height:auto;"> <br><br />
+                style="transform:rotate(90deg);width:75%;height:auto;"> <br><br /><br><br /> Skyler's fashionable friend, Chanel<br><br /><br><br />
               <img
                 src="https://cdn.discordapp.com/attachments/566033150753505280/683527522004238403/20190630_003459.jpg"
-                style="transform:rotate(90deg);width:75%;height:auto;"> <br><br />
+                style="transform:rotate(90deg);width:75%;height:auto;"> <br><br /><br><br />
               <img src="https://cdn.discordapp.com/attachments/566033150753505280/683527002086703184/doggo2.jpg"
                 style="width:75%;height:auto;"> <br><br />
               <img src="https://cdn.discordapp.com/attachments/566033150753505280/683526971652571148/image0.jpg"
                 style="transform:rotate(90deg);width:75%;height:auto;"> <br><br />
               <img
                 src="https://cdn.discordapp.com/attachments/566033150753505280/683527520783564820/20191111_125841.jpg"
-                style="width:75%;height:auto;"> <br><br />
+                style="transform:rotate(90deg);width:75%;height:auto;"> <br><br />
 
             </div>
             <!-- Main heading -->
